# betterWOT

./: LICENSE  README.md  pyproject.toml
src/wotx/: __init__.py  initializer.py  optimal_transport.py  optimal_transport_weighted.py  ot_model.py  plotting.py  util.py
src/wotx.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
